// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateFileContents should not update Well components imported from @kaizen/draft-well or legacy packages 1`] = `
"import * as React from "react";
// @ts-ignore
import { Well } from "@kaizen/draft-well";
export const TestWellComponentUnhappy = (): JSX.Element => (<>
    <Well variant="default">Test 1 should have default variant</Well>
    <Well>Test 2 should have no additional props</Well>
    <Well variant="informative">Test 3 should have informative variant</Well>
    <Well id="test-id" variant="informative">
      Test 4 should have informative variant and an id prop
    </Well>
  </>);
"
`;

exports[`updateFileContents should update Well components imported from @kaizen/component/path 1`] = `
"import * as React from "react";
// @ts-ignore
import { Well } from "@kaizen/components/v3";
/* eslint-disable react/jsx-curly-brace-presence */
export const TestWellComponent = (): JSX.Element => {
    const informativeVar = "informative";
    return (<>
      <Well color="gray">Test 1 should have color gray</Well>
      <Well color="gray">Test 2 should have color gray</Well>
      <Well color="blue">Test 3 should have color blue</Well>
      <Well id="test-id" color="blue">
        Test 4 should have color blue and an id prop
      </Well>
      <Well variant={"informative"}>
        Test 5 unnecessary braces should match and have color blue
      </Well>
      <Well variant={informativeVar}>
        Test 6 use of variable in variant should be unchanged as we cannot
        safely determine the value
      </Well>
      <Well color="blue">Test 7 should have only one color attribute</Well>
    </>);
};
/* eslint-enable react/jsx-curly-brace-presence */
"
`;

exports[`updateFileContents should update Well components imported from @kaizen/components 1`] = `
"import * as React from "react";
// @ts-ignore
import { Well } from "@kaizen/components";
/* eslint-disable react/jsx-curly-brace-presence */
export const TestWellComponent = (): JSX.Element => {
    const informativeVar = "informative";
    return (<>
      <Well color="gray">Test 1 should have color gray</Well>
      <Well color="gray">Test 2 should have color gray</Well>
      <Well color="blue">Test 3 should have color blue</Well>
      <Well id="test-id" color="blue">
        Test 4 should have color blue and an id prop
      </Well>
      <Well variant={"informative"}>
        Test 5 unnecessary braces should match and have color blue
      </Well>
      <Well variant={informativeVar}>
        Test 6 use of variable in variant should be unchanged as we cannot
        safely determine the value
      </Well>
      <Well color="blue">Test 7 should have only one color attribute</Well>
    </>);
};
/* eslint-enable react/jsx-curly-brace-presence */
"
`;

exports[`updateFileContents should update aliased Well components imported from @kaizen/component 1`] = `
"import * as React from "react";
// @ts-ignore
import { Well as KaizenWell } from "@kaizen/components";
/* eslint-disable react/jsx-curly-brace-presence */
export const TestWellComponent = (): JSX.Element => {
    const informativeVar = "informative";
    return (<>
      <KaizenWell color="gray">Test 1 should have color gray</KaizenWell>
      <KaizenWell color="gray">Test 2 should have color gray</KaizenWell>
      <KaizenWell color="blue">
        Test 3 should have color blue
      </KaizenWell>
      <KaizenWell id="test-id" color="blue">
        Test 4 should have color blue and an id prop
      </KaizenWell>
      <KaizenWell variant={"informative"}>
        Test 5 unnecessary braces should match and have color blue
      </KaizenWell>
      <KaizenWell variant={informativeVar}>
        Test 6 use of variable in variant should be unchanged as we cannot
        safely determine the value
      </KaizenWell>
      <KaizenWell color="blue">
        Test 7 should have only one color attribute
      </KaizenWell>
    </>);
};
/* eslint-enable react/jsx-curly-brace-presence */
"
`;
